<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Mirinae SwissKnife</string>

	<string name="about">Swiss Army Knife for Galaxy S.
\nby Yonghwan SO
\n\tscinix@gmail.com
\n
\n\thttp://sio4.tistory.com
\n\thttp://twitter.com/scinix
	</string>
	<string name="features">Features:
\n* Application Manager
\n  - remove some unused system apps with it.
\n* System Tweak
\n* Reverse Tethering
\n  - reverse tethering via WiFi/USB tethering.
\n  - device can access to Internet via PC\'s network.
	</string>
	<string name="changelogs">Changelogs:
\n* version 0.3 (2010-12-22)
\n  - Add About tab. and... return to home from hospital.
\n* version 0.1 (2010-12-10)
\n  - Implement Reverse Tethering feature.
\n  - Issue #1: Market and GTalk are not working.
	</string>

	<string name="apps_label">System Apps</string>
	<string name="apps_select">All or Nothing!</string>
	<string name="apps_enable">Enable</string>
	<string name="apps_disable">Disable</string>

	<string name="rtether_gateway">Gateway :  </string>
	<string name="rtether_dns">DNS :  </string>
	<string name="rtether_dns_value">8.8.8.8</string>
	<string name="rtether_apply">Apply</string>
	<string name="rtether_reset">Reset</string>
	<string name="rtether_apply_toast">Apply Network Configuration...</string>

	<string name="rtether_desc">Connect internet via Reverse WiFi/USB Tethering.
With this, your mobile device can share your PC\'s (wired) network and access to internet via Wireless LAN or USB cable.
\nIs it MOBILE? anyway I need it.
</string>
	<string name="rtether_usage">Usage:
\n\t0. enable WiFi/USB tether of your device.
\n\t1. enter IP address of WiFi/USB interface of PC.
\n\t    (Dynamic by default.)
\n\t2. enter DNS address.
\n\t    (default is last DNS using by device.)
\n\non PC side:
\n\t1. connect to device\'s WiFi/USB tether. (Dynamic)
\n\t2. enable internet share.
\n\t    (on linux, enable IP Forward and Masquerade.)
\n\t    $ echo 1 |sudo tee /proc/sys/net/ipv4/ip_forward
\n\t    $ sudo iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
\n\nKnown Problems:
\n\t* cannot connect to gtalk service.
\n\t* cannot download apps from market.
\n\t   (but market searching is working.)
\n\t* can i determind peer address automatically?
</string>

</resources>
