<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView android:text="@string/apps_label" android:id="@+id/apps_label"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<ListView android:id="@android:id/list"
		android:layout_width="fill_parent" android:layout_height="0.0dip"
		android:layout_weight="1.0" />

	<LinearLayout android:id="@+id/app_footer"
		android:background="@android:drawable/bottom_bar"
		android:paddingTop="5.0dip" android:visibility="visible"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/btn_select" android:text="@string/apps_select"
			android:layout_height="fill_parent" android:layout_width="0.0dip"
			android:layout_weight="1.0" />
		<Button android:id="@+id/btn_enable" android:text="@string/apps_enable"
			android:layout_height="fill_parent" android:layout_width="0.0dip"
			android:layout_weight="1.0" />
		<Button android:id="@+id/btn_disable" android:text="@string/apps_disable"
			android:layout_height="fill_parent" android:layout_width="0.0dip"
			android:layout_weight="1.0" />
	</LinearLayout>
</LinearLayout>
