<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/orion_bg"
	android:orientation="vertical"
	android:layout_height="fill_parent" android:layout_width="fill_parent">
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<ImageView android:id="@+id/logo"
			android:layout_width="140px" android:layout_height="140px"
			android:src="@drawable/logo"
			android:padding="1px"/>
		<TextView android:text="@string/about"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:layout_marginLeft="5px"
			android:textSize="11sp"
			android:autoLink="all" />
	</LinearLayout>
	<ScrollView
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout
			android:orientation="vertical"
			android:layout_height="fill_parent" android:layout_width="fill_parent">
			<TextView android:text="@string/features"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginTop="10px" />
			<TextView android:text="@string/changelogs"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginTop="10px" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
